--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
         </div>
       </article>
 
-      <!-- Excess Checker -->
+      <!-- Excess Hub (renamed from Excess Checker) -->
       <article class="card">
         <div class="top">
           <div class="logo-badge">
             <img src="https://raw.githubusercontent.com/nickn1121/verified-excess-checker/b600d705df19191f9bd1cc2e2b80930cb37259e9/logo.png" alt="">
           </div>
-          <h3 class="title">Excess Checker</h3>
+          <h3 class="title">Excess Hub</h3>
         </div>
-        <div class="desc">Search parts, import CSV, and view supplier counts & availability.</div>
+        <div class="desc">Excess Leaderboard, search, upload & remove excess lists.</div>
         <div class="row">
           <a class="cta" href="./excess-checker/index.html">Open tool →</a>
           <span class="tag">Internal</span>
@@ -155,6 +155,21 @@
           <span class="tag">Internal</span>
         </div>
       </article>
+
+      <!-- Call Stats (moved from Coming soon) -->
+      <article class="card">
+        <div class="top">
+          <div class="logo-badge">
+            <img src="https://raw.githubusercontent.com/nickn1121/verified-excess-checker/b600d705df19191f9bd1cc2e2b80930cb37259e9/logo.png" alt="">
+          </div>
+          <h3 class="title">Call Stats</h3>
+        </div>
+        <div class="desc">Daily call activity and follow-up automation insights.</div>
+        <div class="row">
+          <a class="cta" href="./call-stats/index.html">Open tool →</a>
+          <span class="tag">Internal</span>
+        </div>
+      </article>
     </div>
 
     <!-- Coming soon -->
@@ -169,21 +184,6 @@
           <h3 class="title">Sales Leaderboard</h3>
         </div>
         <div class="desc">Live revenue and GP by rep with time filters and drill-downs.</div>
-        <div class="row">
-          <span class="cta" style="opacity:.6;pointer-events:none">Open tool →</span>
-          <span class="tag soon">Coming soon</span>
-        </div>
-      </article>
-
-      <!-- Call & Email Stats -->
-      <article class="card">
-        <div class="top">
-          <div class="logo-badge">
-            <img src="https://raw.githubusercontent.com/nickn1121/verified-excess-checker/b600d705df19191f9bd1cc2e2b80930cb37259e9/logo.png" alt="">
-          </div>
-          <h3 class="title">Call & Email Stats</h3>
-        </div>
-        <div class="desc">Daily activity, invites, replies and follow-up automation insights.</div>
         <div class="row">
           <span class="cta" style="opacity:.6;pointer-events:none">Open tool →</span>
           <span class="tag soon">Coming soon</span>
@@ -283,6 +283,7 @@
   </div>
 </body>
 </html>
+
 
 
 
