--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -92,6 +92,21 @@
         <div class="desc">Excess Leaderboard, search, upload & remove excess lists.</div>
         <div class="row">
           <a class="cta" href="./excess-checker/index.html">Open tool →</a>
+          <span class="tag">Internal</span>
+        </div>
+      </article>
+
+      <!-- Order Tracker (NEW) -->
+      <article class="card">
+        <div class="top">
+          <div class="logo-badge">
+            <img src="https://raw.githubusercontent.com/nickn1121/verified-excess-checker/b600d705df19191f9bd1cc2e2b80930cb37259e9/logo.png" alt="">
+          </div>
+          <h3 class="title">Order Tracker</h3>
+        </div>
+        <div class="desc">Create & track orders with priority, ETA, multi-leg shipping; filter by salesperson.</div>
+        <div class="row">
+          <a class="cta" href="./order-tracker/index.html">Open tool →</a>
           <span class="tag">Internal</span>
         </div>
       </article>
@@ -283,6 +298,7 @@
   </div>
 </body>
 </html>
+
 
 
 
