--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
       </article>
 
-      <!-- Certificate of Conformance -->
+      <!-- Certificate of Conformance (fixed link) -->
       <article class="card">
         <div class="top">
           <div class="logo-badge">
@@ -121,7 +121,22 @@
         </div>
         <div class="desc">Generate a clean, modern PDF certificate with PO refs, lot numbers, date codes and dates.</div>
         <div class="row">
-          <a class="cta" href="./coc.index.html">Open tool →</a>
+          <a class="cta" href="./coc/index.html">Open tool →</a>
+          <span class="tag">Internal</span>
+        </div>
+      </article>
+
+      <!-- Commercial Invoice Generator (NEW) -->
+      <article class="card">
+        <div class="top">
+          <div class="logo-badge">
+            <img src="https://raw.githubusercontent.com/nickn1121/verified-excess-checker/b600d705df19191f9bd1cc2e2b80930cb37259e9/logo.png" alt="">
+          </div>
+          <h3 class="title">Commercial Invoice Generator</h3>
+        </div>
+        <div class="desc">Create branded commercial invoices with HS codes, COO, Incoterms, and customs-ready formatting.</div>
+        <div class="row">
+          <a class="cta" href="./commercial-invoice/index.html">Open tool →</a>
           <span class="tag">Internal</span>
         </div>
       </article>
@@ -298,6 +313,7 @@
   </div>
 </body>
 </html>
+
 
 
 
